--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SIANIDA
 excludes=
+file.reference.jakarta.activation-2.0.1.jar=tools\\jakarta.activation-2.0.1.jar
+file.reference.jakarta.mail-2.0.1.jar=tools\\jakarta.mail-2.0.1.jar
 file.reference.mysql-connector-j-8.3.0.jar=tools\\mysql-connector-j-8.3.0.jar
 file.reference.RojeruSan.parte1.jar=C:\\Users\\ASUS\\Downloads\\RojeruSan.parte1.jar
 file.reference.RSCalendar.jar=C:\\Users\\ASUS\\Downloads\\RSCalendar.jar
@@ -42,7 +44,9 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.RojeruSan.parte1.jar}:\
     ${file.reference.RSCalendar.jar}:\
-    ${file.reference.mysql-connector-j-8.3.0.jar}
+    ${file.reference.mysql-connector-j-8.3.0.jar}:\
+    ${file.reference.jakarta.mail-2.0.1.jar}:\
+    ${file.reference.jakarta.activation-2.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
