--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/SIANIDA
 excludes=
 file.reference.jakarta.activation-2.0.1.jar=tools\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.mail-2.0.1.jar=tools\\jakarta.mail-2.0.1.jar
+file.reference.jcommon-1.0.23.jar=tools\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=tools\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-j-8.3.0.jar=tools\\mysql-connector-j-8.3.0.jar
 file.reference.RojeruSan.parte1.jar=C:\\Users\\ASUS\\Downloads\\RojeruSan.parte1.jar
 file.reference.RSCalendar.jar=C:\\Users\\ASUS\\Downloads\\RSCalendar.jar
@@ -46,7 +48,9 @@ javac.classpath=\
     ${file.reference.RSCalendar.jar}:\
     ${file.reference.mysql-connector-j-8.3.0.jar}:\
     ${file.reference.jakarta.mail-2.0.1.jar}:\
-    ${file.reference.jakarta.activation-2.0.1.jar}
+    ${file.reference.jakarta.activation-2.0.1.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
