--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.jakarta.activation-2.0.1.jar=tools\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.mail-2.0.1.jar=tools\\jakarta.mail-2.0.1.jar
 file.reference.jcommon-1.0.23.jar=tools\\jcommon-1.0.23.jar
+file.reference.jdatepicker-1.3.4.jar=tools\\jdatepicker-1.3.4.jar
 file.reference.jfreechart-1.0.19.jar=tools\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-j-8.3.0.jar=tools\\mysql-connector-j-8.3.0.jar
 file.reference.RojeruSan.parte1.jar=C:\\Users\\ASUS\\Downloads\\RojeruSan.parte1.jar
@@ -50,7 +51,9 @@ javac.classpath=\
     ${file.reference.jakarta.mail-2.0.1.jar}:\
     ${file.reference.jakarta.activation-2.0.1.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${reference.datechooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -91,6 +94,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.datechooser=../../../date-chooser
+reference.datechooser.jar=${project.datechooser}/dist/datechooser.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
